--- a/src/styles/SearchInput.module.css
+++ b/src/styles/SearchInput.module.css
@@ -1,8 +1,14 @@
 .container {
-    display: flex;
-    justify-content: center;
-    align-items: center;
     margin-top: 16px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.inputGroup {
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 
 .input {
@@ -25,4 +31,12 @@
 
 .button:hover {
     background-color: #484141;
+}
+
+.label {
+    display: block;
+    font-size: 16px;
+    font-weight: bold;
+    color: #333; 
+    margin-bottom: 8px; 
 }
